# node-ffprobe

./: README.md  index.js  package.json
external_libs/ffprobe-53/: AUTHORS  Makedefs.in  Makefile.in  README  configure  configure.in  show-version.sh  version.sh
external_libs/ffprobe-53/doc/: Makefile.in  ffprobe.1  ffprobe.fish  ffprobe.html  ffprobe.texi
external_libs/ffprobe-53/src/: Makefile.in  cmdutils.c  cmdutils.h  ffprobe.c  version.h
external_libs/ffprobe-53/tools/: plot-vframes-bitrate.pl  plot-vframes-sizes.pl
lib/: ffprobe.js
