# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.60)

dnl this is actually the only point where is defined the version:
dnl i'd like to change it with a more flexible method (for example make it
dnl depending on the source tree revision like in the FFmpeg project.
AC_INIT(ffprobe,m4_esyscmd([./show-version.sh | tr -d '\n']))

subdirs="src doc"
AC_SUBST(subdirs)

dnl Find the system type
dnl AC_CANONICAL_HOST

dnl Remove trailing slash in $prefix if necessary
case "${prefix}" in
  */)
    prefix=`echo ${prefix} | sed -e 's/^\(.*\)\/$/\1/'`
    ;;
esac

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

AC_PATH_PROG(RM, rm, rm)
if test "X$RM" = "X" || test "X$RM" = "Xno" ; then
   AC_MSG_ERROR([
          rm must be installed on your system.
          Please check that rm is installed and is included
          into your PATH.
          ])
fi

AC_PATH_PROG(PKG_CONFIG, pkg-config, pkg-config)
if test "X$PKG_CONFIG" = "X" || test "X$PKG_CONFIG" = "Xno" ; then
   AC_MSG_ERROR([
          pkg-config must be installed on your system.

          Please check that pkg-config is installed and is included
          into your PATH.
          ])
fi

AC_PATH_PROG(PERL, perl, perl)
if test "X$PERL" = "X" || test "X$PERL" = "Xno" ; then
   AC_MSG_WARN([
          perl is not installed on your system. You'll be able to compile and install
          this program, but won't be able to run the tools script.
          Please check that perl is installed and is included
          into your PATH.
          ])
fi

AC_PATH_PROG(POD2MAN, pod2man, pod2man)
if test "X$POD2MAN" = "X" || test "X$PODMAN" = "Xno" ; then
   AC_MSG_WARN([
          pod2man is not installed on your system. You'll be able to compile and install
          this program, but you won't be able to generate the man pages of the perl tools. 
          Please check that pod2man is installed and is included
          into your PATH.
          ])
fi

AC_PATH_PROG(POD2HTML, pod2html, pod2html)
if test "X$POD2HTML" = "X" || test "X$POD2HTML" = "Xno" ; then
   AC_MSG_WARN([
          pod2html is not installed on your system. You'll be able to compile and install
          this program, but you won't be able to generate the HTML docs.
          Please check that pod2html is installed and is included
          into your PATH.
          ])
fi

AC_PATH_PROG(TEXI2HTML, texi2html, texi2html)
if test "X$TEXI2HTML" = "X" || test "X$TEXI2HTML" = "Xno" ; then
   AC_MSG_WARN([
          texi2html is not installed on your system. You'll be able to compile and install
          this program, but you won't be able to generate the HTML docs.
          Please check that pod2html is installed and is included
          into your PATH.
          ])
fi

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lXXX':
AC_CHECK_LIB([m], [main],,  AC_MSG_ERROR([Please install libm]))
AC_CHECK_LIB([z], [main],,  AC_MSG_ERROR([Please install libz]))
AC_CHECK_LIB([avutil], [main],,  AC_MSG_ERROR([Please install libavutil]))
AC_CHECK_LIB([avcodec], [main],,  AC_MSG_ERROR([Please install libavcodec]))
AC_CHECK_LIB([avformat], [main],,  AC_MSG_ERROR([Please install libavformat]))

AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

AC_CHECK_HEADERS([libavformat/avformat.h libavutil/avstring.h libavcodec/opt.h],, AC_MSG_ERROR([I cannot find some of the required ffmpeg headers]))

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_OUTPUT(Makedefs Makefile src/Makefile doc/Makefile, echo timestamp > stamp-h)

echo ""
echo "Good - your configure finished. Start make now."
echo ""
